<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity29" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/beforedayLabel" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_centerHorizontal="true"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:text="@string/nextdayLabel" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/button2" >

        <Button
            android:id="@+id/button3"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/Graph_Label" />

        <Button
            android:id="@+id/button4"
            android:layout_width="92dp"
            android:layout_height="68dp"
            android:text="@string/CalenderLabel" />

        <Button
            android:id="@+id/button5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.86"
            android:text="@string/KoumokuLabel" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_above="@+id/button6"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="17dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:text="@string/TextViewLabel" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_below="@+id/button1"
        android:text="項目　　　　　　内わけ　　　　　　金額　" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_toLeftOf="@+id/button2"
        android:text="@string/TextViewLabel" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/linearLayout1"
        android:text="Button" />

</RelativeLayout>